--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.9-2024.1.24-ccd7124b3
+appVersion: v2.9-2024.2.8-8ba4b03d4
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.53.12-1-cap-2.9-2024.1.24-ccd7124b3
+version: 5.53.12-1-cap-2.9-2024.2.8-8ba4b03d4
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Upgrade Argo CD to v2.9-2024.1.24-ccd7124b3. With critical vulnerability fixes of stdlib and go-git/v5
+      description: Upgrade Argo CD to v2.9-2024.2.8-8ba4b03d4. With critical vulnerability fixes revert and argo-cd reporter project name bypassing
