--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.10-2024.3.29-1dcc54e29
+appVersion: v2.10-2024.5.14-9315e75e1
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 6.7.18-2-cap-2.10-2024.3.29-1dcc54e29
+version: 6.7.18-3-cap-2.10-2024.5.14-9315e75e1
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,6 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Upgrade argo-cd to v2.10-2024.3.29-1dcc54e29
+      description: Upgrade argo-cd to v2.10-2024.5.14-9315e75e1
+    - kind: changed
+      description: Fix for security vulnerability GHSA-9766-5277-j5hr - Redis authentication
