upgrade helm version in order to fix critical vulnerability

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.12-2024.9.23-0dc32342c
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.4.7-1-cap-2.12-2024.9.9-ba613c5bd
+version: 7.4.7-1-cap-2.12-2024.9.30-995854136
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Upgrade argo-cd to v2.12-2024.9.23-0dc32342c with and add acr controller support
+      description: Upgrade argo-cd to v2.12-2024.9.30-995854136 with upgrading helm to 3.15.4
